# nlp_paper_recommender

./: .gitignore  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
data/: beops_papers.csv
models/: tfidf_model.joblib
notebooks/: crossref.ipynb  scopus.ipynb  vectorization.ipynb
src/: config.py  load_data.py  load_vectorizer.py  streamlit_app.py  text_preparation.py  vector_database.py
